--- a/templates/index.html
+++ b/templates/index.html
@@ -6,15 +6,20 @@
 
 <div class="container">
 
-        <h8> <align=left>  <button type = "button" class = "btn btn-warning float-left" data-toggle ="modal"> <a href= "/forms"> Add new entry </a> </button> </align>  </h8>
-
-        <br>
-        <br>
+    <h3> <centre> Welcome to the Trainline Gift and Hospitality portal </centre> </h3>
     <br>
     <br>
+    <br>
+    <br>
+<p>     <h4>    As per UK corporate requirements, we are required to ensure that we record and track gifts and hospitality.
+    </p>
+    <br>
+</p>    <h4>        Please use the navigation bar to create or view entries.
+</h4> </p>
+<br>
 
-        <h8> <align=right> <button type = "button" class = "btn btn-warning float-center" data-toggle ="modal"> <a href= "/table"> Display register </a> </button>  </align> </h8>
-
+<p>    <h4>  Please don't hesitate to contact the <a href = "mailto: andras.horvath@thetrainline.com">Trainline Corporate Secretary</a> in case you have any questions. </h4>
+</p>
 
 </div>
 {% endblock %}
