--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -6,7 +6,7 @@
 <br>
 <br>
 
-<h4> Thank you so much for your submission! We appreciate your continued assistance! An email has also been sent to the Trainline Compliance Team </h4>
+<h4> Thank you so much for your submission! We appreciate your assistance! An email has also been sent to the Trainline Compliance Team </h4>
 
 {% endblock %}
 
