--- a/templates/forms.html
+++ b/templates/forms.html
@@ -17,45 +17,49 @@
                                         <option value = "Paris">Paris</option>
                                 </select>
                                 </div>
+<br>
+<br>
 
     <div class="mb-3">
         <label> Gift received from:</label>
         <input type="text" class="form-control" name="gift_received_from" required="1">
     </div>
 
+    <br>
+    <br>
+
     <div class="mb-3">
-    <label>Date gift received:</label>
+        <label>Date gift received:</label>
         <input type="date" class="form-control" name="date_gift_received" required="1">
     </div>
+<br>
+    <br>
 
     <div class="mb-3">
-    <label>Gift Description:</label>
-                                    <input type="text" class="form-control" name="gift_description" required="1">
-                                </div>
-
-
-
+        <label>Gift Description:</label>
+        <input type="text" class="form-control" name="gift_description" required="1">
+     </div>
+<br>
+    <br>
     <div class="mb-3">
-                                    <label>Action taken: </label>
-                                    <input type="text" class="form-control" name="action_taken" required="1">
-                                </div>
-
-
+        <label>Action taken: </label>
+        <input type="text" class="form-control" name="action_taken" required="1">
+      </div>
+<br>
+    <br>
     <div class="mb-3">
-                                    <label>Gift/Fundraising Event: </label>
-                                    <input type="text" class="form-control" name="date_event" required="1">
-                                </div>
-
+         <label>Gift/Fundraising Event: </label>
+         <input type="text" class="form-control" name="date_event" required="1">
+     </div>
+<br>
+    <br>
     <div class="mb-3">
-                                    <label>Amount raised for charity: </label>
-                                    <input type="number" class="form-control" name="amount_raised" required="1">
+        <label>Amount raised for charity: </label>
+        <input type="number" class="form-control" name="amount_raised" required="1">
                                 </div>
-
-
-
-
-                            </div>
-                         <input type = "submit" value = "Submit Data" class = "btn-btn-primary">
+<br>
+    <br>
+                             <input type = "submit" value = "Submit Data" class = "btn btn-primary">
        </form>
 
 {% endblock %}
